# laura_sanchez_proyecto1

./: .gitignore  README.md  pyproject.toml
Codigo/: carga_datos_socrata.ipynb  cuaderno_etl.ipynb
app/: conectividad.py  contratos.py
