[tool.poetry]
name = "laura-sanchez-proyecto1"
version = "0.1.0"
description = "Mi primer proyecto cd"
authors = ["laurasanchez610 <natalysanchez106@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
sodapy = "^2.2.0"
python-dotenv = "^1.0.1"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
